# verbiage

./: .gitignore  README.md
.github/workflows/: deploy.yml  new_puzzles.yml
scripts/: .gitignore  README.md  VerbiageGame.py  ai_utils.py  en_fivers.py  en_game.py  en_words.py  fr_fivers.py  fr_game.py  fr_words.py  game.py  gemini_batch.py  pyproject.toml  utils.py
scripts/instructions/en/: character.md  en_fivers.json  keep_and_avoid.yaml  test_words.json  things_to_avoid.md  word_response.md  word_response_optimized.md
scripts/instructions/fr/: fr_fivers.json  fr_words.json  test_words.json  things_to_avoid.md  word_response.md
scripts/word_lists/: en_words.py  fr_words.py  utils.py
scripts/word_lists/en/: en_words.json  keep_and_avoid.yaml  test_words.json
scripts/word_lists/fr/: keep_and_avoid.yaml  test_words.json
verbiage/: index.html  package-lock.json  package.json  vite.config.js
verbiage/public/: fr_accented_dict.json  manifest.webmanifest
verbiage/public/puzzles/en/: en_2025-06-30.json
verbiage/src/: App.svelte  app.css  main.js
verbiage/src/components/: Clue.svelte  Keyboard.svelte  LanguageFlags.svelte  PWAInstallButton.svelte  PuzzleCalendar.svelte  VictorySection.svelte  WordInput.svelte
verbiage/src/lib/: i18n.js  puzzleCalendars.json
verbiage/src/lib/locales/: en.json  fr.json
